# adb-android-control

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOGBOOK.md  PITCH.md  README.md  REVIEW_CHECKLIST.md  SECURITY.md  SKILL.md  device.env.example  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  property-nightly.yml
adb_android_control/: __init__.py  automation.py  cli.py  cli_helpers.py  connection_monitor.py  controller.py  monitor.py  port_scan.py  radio.py  usb.py
assets/: README.md
assets/demos/: 01-quickstart.tape  02-monitor.tape  03-reconnect.tape
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ERROR_HANDLING.md  GUIDELINES.md  MIGRATING.md  PERFORMANCE.md  SETUP.md  TESTING_DOCTRINE.md  TROUBLESHOOTING.md  TUTORIALS.md  USE_CASES.md
examples/: launch-and-screenshot.json
references/: keycodes.md  troubleshooting.md
scripts/: adb-control.sh  adb_automation.py  adb_controller.py  adb_monitor.py  adb_port_scan.py  adb_port_scan.sh  connection_monitor.py  radio_scan.py  usb_detect.sh  usb_identify.py  usb_info.py
termux/: adb-autoconnect.boot  adb-autoconnect.service  setup.sh
tests/: conftest.py
tests/property/: test_parsers.py
tests/race/: test_concurrent.py
tests/unit/: test_automation.py  test_cli.py  test_connection_monitor.py  test_controller.py  test_failure_injection.py  test_harness_smoke.py  test_monitor.py  test_port_scan.py  test_radio.py  test_usb.py
